# cci-vocabularies

./: .gitignore  LICENSE  README.md  cci-ontology.ttl  cci_vocabs_20191121.txt  index-en.html  ontology.nt  pyproject.toml  vocab_upload.bash
cci/: cci.ttl  platform.ttl  sensor.ttl
data/: README.md  cci-cfparameters.csv  cci-cfparameters.ods  cci-collections.ods  cci-dataType-ecv-mapping.ods  cci-datatype.ods  cci-description.ods  cci-ecv.csv  cci-ecv.ods  cci-freq.ods  cci-frequency.ods  cci-gcos-cf-mapping.csv  cci-gcos-cf-mapping.ods  cci-gcos-cf.ods  cci-gcos-mapping.csv  cci-gcos-mapping.ods  cci-ontology.ods  cci-org.csv  cci-org.ods  cci-platform-group-mapping.ods  cci-platform-groups.ods  cci-platform-mapping.ods  cci-platform-programme-mapping.ods  cci-platform-sensor-mapping.csv  cci-platform-sensor-mapping.ods  cci-platform.ods  cci-platformprog.ods  cci-platforms.csv  cci-platforms.ods  cci-processing-levels.csv  cci-processing-levels.ods  cci-proclev-mapping.ods  cci-proclev.ods  cci-product.ods  cci-schemes.ods  cci-sensor-mapping.ods  cci-sensor.csv  cci-sensor.ods  cci-top-concepts.ods  climate4impact-ontology.ods  (+37 more)
diagrams/: README.md  classes.drawio  collection.drawio
html/: cci.html  gcos.html  index.html
model/: cci-drs.ttl  cci-ecv.ttl  cci-gcos-cf-mapping.ttl  cci-org.ttl  cci-platform.ttl  cci-properties.ttl  cci-sensor.ttl  cci.ttl  cmip.ttl  gcos.ttl  grib.ttl
src/: import_cci_ecv.py  import_cci_gcos_cf_mapping.py  import_cci_org.py  import_cci_platform.py  import_cci_processing-level.py  import_cci_sensor.py  import_cmip_realm.py  (+7 more)
(+492 files in other folders)
