[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cci-vocabularies"
version = "1.0"
dependencies = [
  "openpyxl",
  "pandas",
  "rdflib-jsonld",
]

[project.scripts]
cci-vocab = "vocabularies.all:main"

[tool.setuptools]
packages = ["vocabularies", "vocabularies.generate_html", "vocabularies.generate_ttl"]
