[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cci-vocabularies"
version = "1.0"
dependencies = [
  "openpyxl",
  "pandas",
  "rdflib (>=6.0.1)",
]
requires-python = ">=3.9,<4.0"

[project.scripts]
cci-vocab = "vocabularies.all:main"

[tool.setuptools]
packages = ["vocabularies", "vocabularies.generate_html", "vocabularies.generate_ttl"]
